schema/testdata/validation_enum_default_wrong_type/schema.keel
model Post {
    fields {
        type PostType @default("Draft")
    }
}

enum PostType {
    Draft
    Published
}
